--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Arial', 'Verdana', sans-serif; /* Standard sans-serif web font for sales data */
   color: #333; /* Standard font color for text */
@@ -7,10 +6,24 @@ body {
   padding: 0;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: 'Righteous', cursive; /* Custom Google Font for heading tags */
-  color:  #FA8072; /* Font color for heading tags */
+  color:  #101010; /* Font color for heading tags */
+  margin-left: 20px;
 }
+
+p {
+  font-family: 'Arial', 'Verdna', sans-serif;
+  margin-left: 20px;
+  padding: flex;  
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
+
 
 header {
   background-color: #000; /* Header background: Black */
