had to change the font color back to pink/salmon b/c I couldn't read it on the main page.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,7 +8,7 @@ body {
 
 h1, h2, h3 {
   font-family: 'Righteous', cursive; /* Custom Google Font for heading tags */
-  color:  #101010; /* Font color for heading tags */
+  color:  #FA8072; /* Font color for heading tags */
   margin-left: 20px;
 }
 
